# Barnes-Hut

./: .gitignore  .gitlab-ci.yml  CMakeLists-apple-local.txt  CMakeLists.txt  Dockerfile  README.md  benchmark.sh  benchmark_S1.sh  benchmark_S1_2.sh  benchmark_S2.sh  benchmark_S2_2.sh  benchmark_S2_bodies.sh  benchmark_S2_theta.sh  benchmark_S3.sh  benchmark_srun.sh  benchmark_srun_.sh  jobscript.sh  performance_analysis.md  scenario1.sh  scenario2.sh  scenario2_300149.sh  scenario_1.sh  scenario_2.sh  scenario_3.sh  scenario_jobs.sh  scenario_large_1ydtend.sh  scenario_large_20dtend.sh
.devcontainer/: devcontainer.json
benchmark/scenario2__dt_1h_tend_1d_vs_1d_theta_1.05/vs_outputs/: sim_scenario2_dt1h_tend1d_vs1d_bodies50000.pvd
data/: scenario1_save.csv  scenario1tiny.csv
data/state_vectors_csvs/: scenario1_19054.csv
include/: barnes_hut.h  body.h  bounding_box.h  exchange.h  fix_includes.h  integration.h  io.h  kepler_to_cartesian.h  linear_octree.h  load_balancing.h  logger.h  morton_keys.h  octree.h  parse_time.h  policy.h  traversal.h  utility.h
reference/: barnes_hut.cpp  benchmark_S1.sh  integration.cpp  integration.h  linear_octree_sample.cpp  main_old.cpp  morton_order.cpp  octree.cpp  scenario1.sh
result/: scenario1_save.csv
src/: barnes_hut.cpp  bounding_box.cpp  exchange.cpp  integration.cpp  io.cpp  kepler_to_cartesian.cpp  linear_octree.cpp  load_balancing.cpp  logger.cpp  main.benchmark.cpp  main.cpp  morton_keys.cpp  orbital_converter.cpp  traversal.cpp
test/: CMakeLists.txt  test_barnes_hut.cpp  test_integration.cpp  test_io.cpp  test_main.cpp  test_octree.cpp  test_parse_time.cpp
